<resources>
    <string name="app_name">Customer</string>

    <string name="home">Trang Chủ</string>
    <string name="message">Tin Nhắn</string>
    <string name="cart">Giỏ Hàng</string>
    <string name="toi">Tôi</string>
    <string name="hint_Username">Tài khoản</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="text_sign_in">Đăng nhập</string>
    <string name="text_sign_up">Đăng ký</string>
    <string name="text_sign_out">Đăng xuất</string>
    <string name="text_forgot_password">Quên mật khẩu?</string>
    <string name="text_change_password">Đổi mật khẩu</string>
    <string name="text_information_user">Thông tin tài khoản</string>
    <string name="text_order_status">Trạng thái đơn hàng</string>
    <string name="text_forgot_password_">Quên mật khẩu</string>
    <string name="text_add_full_name">Nhập họ tên</string>
    <string name="text_add_email">Nhập địa chỉ mail</string>
    <string name="text_add_birthday">Nhập ngày sinh</string>
    <string name="hint_add_password">Nhập mật khẩu</string>
    <string name="hint_add_re_password">Nhập lại mật khẩu</string>
    <string name="text_send">Gửi</string>
    <string name="text_edit_infor_user">Chỉnh sửa thông tin tài khoản</string>
    <string name="text_add_phone">Nhập số điện thoại</string>
    <string name="text_add_address">Nhập địa chỉ</string>
    <string name="text_full_name">Họ Và Tên: </string>
    <string name="text_birthday">Ngày sinh:</string>
    <string name="text_phone">Số Điện Thoại:</string>
    <string name="text_address">Địa Chỉ:</string>
    <string name="text_save">Lưu thay đổi</string>
    <string name="text_related_books">Các loại sách liên quan:</string>
    <string name="text_detail_book">Chi tiết sách:</string>
    <string name="book_name">Còn chút gi để nhớ</string>
    <string name="money">99 000 VND</string>
    <string name="category">Thể loại: Tiểu thuyết</string>
    <string name="warehouse">Kho:200 cuốn</string>
    <string name="author">Tác giả: Nguyễn Ngọc Ánh</string>
    <string name="product_detail">Chi tiết sản phẩm</string>
    <string name="code">Mã: gaga-sad-fsdf-gh</string>
    <string name="hint_enter_evaluate">Nhập đánh giá...</string>
    <string name="hint_new_password">Nhập mật khẩu mới</string>
    <string name="hint_add_new_re_password">Nhập lại mật khẩu mới</string>
    <string name="search">Tìm kiếm...</string>
    <string name="district">Quận/Huyện:</string>
    <string name="ward">Xã/Phường:</string>
    <string name="town">Khu Phố:</string>
    <string name="street">Số nhà, tên đường:</string>
    <string name="order">Đặt hàng</string>
    <string name="test_num">Số lượng sản phẩm: 10</string>
    <string name="test_total">Tổng tiền: 100 000 VND</string>
    <string name="test_discount">Giảm giá: 20 000 VND</string>
    <string name="test_total_">Tiền trả: 80 000 VND</string>
    <string name="contact">Thông tin liên hệ</string>
    <string name="enter_text">Nhập tin nhắn...</string>
    <string name="order_code">Mã đơn hàng: </string>
    <string name="text_name">Tên người nhận: </string>
    <string name="status_in_transit">Đang giao</string>
    <string name="pay">Tiền trả: </string>
    <string name="sub">-</string>
    <string name="test_book">Giải tích 12</string>
    <string name="delete">Xóa</string>
    <string name="add">+</string>
    <string name="loading">Loading...</string>
    <string name="close">Đóng</string>
    <string name="singin_failed">Sai tài khoản hoặc mật khẩu!</string>
    <string name="field_empty"><![CDATA[<item name=\"fielKhông được để trống trường này!]]></string>
    <string name="sign_up_failed">Đăng kí không thành công!</string>
    <string name="send_success">Gửi email đặt lại mật khẩu thành công!</string>
    <string name="send_failed">Gửi email đặt lại mật khẩu không thành công!</string>
    <string name="order_evaluate_failed">Đơn hàng chưa giao nên chưa thể đánh giá!</string>
    <string name="order_success">Đặt hàng thành công!</string>
    <string name="authen_failed">Xác thực mật khẩu không khớp!</string>
    <string name="change_password_success">ổi mật khẩu thành công!</string>
    <string name="change_password_failed">Đổi mật khẩu không thành công!</string>
    <string name="authen_password_failed">Mật khẩu hiện tại không đúng!</string>
    <string name="stock">Sản phẩm đã hết hàng, vui lòng quay lại sau!</string>
    <string name="add_cart_success">Thêm vào giỏ hàng thành công!</string>
    <string name="no_products">Bạn chưa chọn sản phẩm nào!</string>


    <string-array name="evalute">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
</resources>