<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linnear_itemBill"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="20dp">

        <TextView
            android:id="@+id/txtTrangThaiDonHang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/status_in_transit"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDiaChiBillStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/text_address"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTenNguoiNhanBillStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/text_name"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMaDonHangBillStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/order_code"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTienTraBillStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/pay"
                android:textColor="@color/red"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>