<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tbChangePassword"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/product_detail" />

            <ImageView
                android:id="@+id/imgHinhAnhChiTietSach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/sach1" />

            <TextView
                android:id="@+id/txtTenSachChiTietSach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:gravity="center"
                android:text="@string/book_name"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtGiaTienChiTietSach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/money"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMoTaChiTietSach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_detail_book"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtKhoChiTietSach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/warehouse"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtTheLoaiChiTietSach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtTacGiaChiTietSach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/author"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_related_books"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <GridView
                android:id="@+id/lvProductDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:horizontalSpacing="10dp"
                android:numColumns="3"
                android:verticalSpacing="10dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9.2"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgMessageInboxChiTietSach"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:src="@drawable/mess"/>

        <ImageView
            android:id="@+id/imgAddCartChiTietSach"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:src="@drawable/cart1" />

    </LinearLayout>

</LinearLayout>