<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbChangePassword"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bg_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/text_change_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtNhapMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:hint="@string/hint_add_password" />

        <EditText
            android:id="@+id/txtNhapMatKhauMoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:hint="@string/hint_new_password" />

        <EditText
            android:id="@+id/txtNhapLaiMatKhauMoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:hint="@string/hint_add_new_re_password" />

        <Button
            android:id="@+id/btnDoiMK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/bg_toolbar"
            android:text="Đổi mật khẩu"
            android:textSize="20sp"
            android:padding="10dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>