<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbChangePassword"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FF5722"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Thông tin đặt hàng" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgIconDeliver"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSoLuongSanPhamXacNhanDonHang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_num"
                android:textSize="18sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtTongTienXacNhanDonHang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_total"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtGiamGiaXacNhanDonHang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_discount"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtTienTraXacNhanDonHang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_total_"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/contact"
        android:textSize="22sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_phone"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtSoDienThoaiXacNhanDonHang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:minHeight="48dp"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/district"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtQuanHuyenXacNhanDonHang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/ward"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtXaPhuongXacNhanDonHang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/town"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtKhuPhoXacNhanDonHang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/street"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtSoNhaTenDuongXacNhanDonHang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/btnDatHangXacNhanDonHang"
            android:layout_width="match_parent"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/bg_corner_button"
            android:layout_height="wrap_content"
            android:text="@string/order" />
    </LinearLayout>

</LinearLayout>