<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/chkItemProductInCart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/imgHinhAnhProductInCart"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/toan12" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTenProductInCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_book"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGiamProductInCart"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/sub"
                android:textSize="20sp"
                android:layout_marginRight="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSoLuongProductInCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="x4"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnTangProductInCart"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtGiaTienInCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/money"
            android:textColor="@color/red"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnXoaProductInCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:background="@drawable/bg_corner_button"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>